--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-torch==2.8.0
-torchvision==0.23.0
+flask==3.1.1
+flask-cors==6.0.1
+torch==2.2.2
+torchvision==0.17.2
 transformers==4.36.2
-Pillow==10.1.0
-matplotlib==3.8.2
+Pillow==10.2.0
 easyocr==1.7.2
 numpy==1.26.4
 opencv-python==4.9.0.80
-Flask==3.0.3
-flask-cors==4.0.0
-gunicorn==21.2.0
+matplotlib==3.8.2
