--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask==3.1.1
-flask-cors==6.0.1
-torch==2.2.2
-torchvision==0.17.2
+torch==2.8.0
+torchvision==0.23.0
 transformers==4.36.2
 Pillow==10.2.0
+matplotlib==3.8.2
 easyocr==1.7.2
 numpy==1.26.4
-opencv-python==4.9.0.80
-matplotlib==3.8.2
+opencv-python==4.12.0.88
+flask==3.1.1
+flask-cors==6.0.1
+gunicorn
